{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 156,
  "lineage": "5828e76f-ee92-80ce-6f13-8e6b334ab2f4",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:099039928022:security-group/sg-09463c0fa6beb9d13",
            "description": "Security group for WireGuard",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09463c0fa6beb9d13",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WireGuard",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WireGuard-20210426113113172500000001",
            "name_prefix": "WireGuard-",
            "owner_id": "099039928022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WireGuard"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b881b8aad7ab7d92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-507594234",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09463c0fa6beb9d13",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "WireGuard",
            "from_port": 51820,
            "id": "sgrule-3050984926",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09463c0fa6beb9d13",
            "self": false,
            "source_security_group_id": null,
            "to_port": 51820,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-772127736",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09463c0fa6beb9d13",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:099039928022:internet-gateway/igw-0a4fe23dd5ba0ab1c",
            "id": "igw-0a4fe23dd5ba0ab1c",
            "owner_id": "099039928022",
            "tags": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b881b8aad7ab7d92"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a4fe23dd5ba0ab1c",
            "id": "r-rtb-0a6e33ed3889791431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a6e33ed388979143",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:099039928022:route-table/rtb-0efcac8ebfe9bbc9f",
            "id": "rtb-0efcac8ebfe9bbc9f",
            "owner_id": "099039928022",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard-private-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b881b8aad7ab7d92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:099039928022:route-table/rtb-06989cf37dcf980eb",
            "id": "rtb-06989cf37dcf980eb",
            "owner_id": "099039928022",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard-private-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b881b8aad7ab7d92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:099039928022:route-table/rtb-0a6e33ed388979143",
            "id": "rtb-0a6e33ed388979143",
            "owner_id": "099039928022",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4fe23dd5ba0ab1c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b881b8aad7ab7d92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2a240b515c7babe",
            "route_table_id": "rtb-0efcac8ebfe9bbc9f",
            "subnet_id": "subnet-09517ea993c4b78a8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a61126180dc017c",
            "route_table_id": "rtb-06989cf37dcf980eb",
            "subnet_id": "subnet-056e86fff25d4eb7b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088e38520511d6c10",
            "route_table_id": "rtb-0a6e33ed388979143",
            "subnet_id": "subnet-0fada901dac44c80a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7dfac7f0a4f7b66",
            "route_table_id": "rtb-0a6e33ed388979143",
            "subnet_id": "subnet-0556c79a3a2b3d4b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:099039928022:subnet/subnet-09517ea993c4b78a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09517ea993c4b78a8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "099039928022",
            "tags": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard-private-eu-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard-private-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b881b8aad7ab7d92"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:099039928022:subnet/subnet-056e86fff25d4eb7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-056e86fff25d4eb7b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "099039928022",
            "tags": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard-private-eu-central-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard-private-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b881b8aad7ab7d92"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:099039928022:subnet/subnet-0fada901dac44c80a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0fada901dac44c80a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "099039928022",
            "tags": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard-public-eu-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard-public-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b881b8aad7ab7d92"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:099039928022:subnet/subnet-0556c79a3a2b3d4b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0556c79a3a2b3d4b3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "099039928022",
            "tags": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard-public-eu-central-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard-public-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b881b8aad7ab7d92"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:099039928022:vpc/vpc-0b881b8aad7ab7d92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb19dab3f14af4e9",
            "default_route_table_id": "rtb-099d945aaaaa178ab",
            "default_security_group_id": "sg-0532c3b1b5bc70779",
            "dhcp_options_id": "dopt-ea28d982",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b881b8aad7ab7d92",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-099d945aaaaa178ab",
            "owner_id": "099039928022",
            "tags": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard",
              "Terraform": "true"
            },
            "tags_all": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wg",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:099039928022:subnet/subnet-0fada901dac44c80a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.101.0/24",
            "default_for_az": false,
            "id": "subnet-0fada901dac44c80a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "099039928022",
            "state": "available",
            "tags": {
              "Description": "Test VPC for WireGuard",
              "Name": "Test-VPC-for-WireGuard-public-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b881b8aad7ab7d92"
          }
        }
      ]
    },
    {
      "module": "module.wg",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-078d556faa4f94d52",
            "domain": "vpc",
            "id": "eipalloc-2f820f17",
            "instance": "i-0ca62c8e1abcf38b4",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-08e1b5c580319b780",
            "private_dns": "ip-10-0-101-138.eu-central-1.compute.internal",
            "private_ip": "10.0.101.138",
            "public_dns": "ec2-3-66-243-130.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.66.243.130",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.wg.aws_network_interface.this"
          ]
        }
      ]
    },
    {
      "module": "module.wg",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-09d658bd1e9ad65e1",
                "device_index": 0,
                "instance": "i-0ca62c8e1abcf38b4"
              }
            ],
            "id": "eni-08e1b5c580319b780",
            "ipv6_address_count": 0,
            "mac_address": "02:4a:23:4e:8d:66",
            "private_ip": "10.0.101.138",
            "private_ips": [
              "10.0.101.138"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09463c0fa6beb9d13"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0fada901dac44c80a"
          },
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}